# Workflows

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  EVALUATION_dev_check.md  Issues.txt  LICENSE  PHASE1_COMPLETE.md  PHASE1_DEFERRED_ADAPTATIONS.md  PHASE2_DEFERRED_ADAPTATIONS.md  PHASE3_COMPLETE.md  PHASE3_DEFERRED_ADAPTATIONS.md  PHASE6_COMPLETE.md  README.md  STRUCTURE.md  SYNC_DRIFT_ANALYSIS.md  TEMPLATE_REPO_EVALUATION.md  actionlint-allowlist.args  autofix_report_enriched.json  codex-analysis-487.json  codex-analysis-493.json  codex-analysis-495.json  codex-output.md  codex-prompt.md  codex-session-487.jsonl  codex-session-495.jsonl  coverage-output.txt  coverage.json  input.txt  keepalive-metrics.ndjson  pr_body.md  pyproject.toml  sitecustomize.py  template-pr-description.md  template-repo-readme-updates.patch  topics.json
.devcontainer/: devcontainer.json
.extraction/: README.md
.extraction/phases/: PHASE2_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_DEFERRED_ADAPTATIONS.md  PHASE5_COMPLETE.md  REORGANIZATION_COMPLETE.md
.extraction/planning/: DOCS_FILTERING_MATRIX.md  DOCUMENTATION_AUDIT.md  EXTRACTION_PRIORITY.md  GETTING_STARTED.md  KEEPALIVE_TRANSITION.md  PLANNING_COMPLETE.md  QUICK_REFERENCE.md  SCRUBBING_CHECKLIST.md  STATUS.md  TEST_SEPARATION_STRATEGY.md  TRANSITION_PLAN.md  TRANSITION_PLAN_V2.md  VIRTUAL_ENVIRONMENT_TRANSITION.md
.extraction/tools/: validate-extraction.sh
.github/: CODEOWNERS  actionlint-allowlist.txt  dependabot.yml  sync-manifest.yml
.github/ISSUE_TEMPLATE/: agent-task.md  agent-workflow-task.md  agent_task.yml  bug_report_codex.yml  config.yml  feature_request_codex.yml
.github/config/: required-contexts.json
.github/copilot-skills-local/: consumer-sync-process.md
.github/scripts/: README.md  agents_pr_meta_keepalive.js  agents_pr_meta_orchestrator.js  agents_pr_meta_update_body.js  agents_verifier_context.js  api-helpers.js  autofix_emit_report.py  comment-dedupe.js  decode_raw_input.py  detect-changes.js  error_classifier.js  gate_summary.py  github_api_retry.js  health_summarize.py  install-ci-deps.sh  issue_scope_parser.js  keepalive_gate.js  keepalive_instruction_template.js  keepalive_loop.js  keepalive_orchestrator_gate_runner.js  keepalive_post_work.js  keepalive_state.js  keepalive_worker_gate.js  label_rules_assert.py  lockfile_status.py  merge_manager.js  parse_chatgpt_topics.py  post_completion_comment.js  prompt_injection_guard.js  render_cosmetic_summary.py  restore_branch_snapshots.py  verifier_ci_query.js  verifier_issue_formatter.js  write_dispatch_summary.sh
.github/signature-fixtures/: basic_hash.txt  basic_jobs.json
.github/workflows/: README.md  (+71 more)
agents/: codex-1.md  codex-10.md  codex-101.md  codex-11.md  codex-12.md  codex-123.md  codex-13.md  codex-14.md  codex-144.md  codex-15.md  codex-153.md  codex-157.md  codex-16.md  codex-160.md  codex-164.md  codex-167.md  codex-17.md  codex-170.md  codex-2.md  codex-20.md  codex-213.md  codex-23.md  codex-266.md  codex-271.md  codex-281.md  codex-282.md  codex-287.md  codex-288.md  codex-297.md  codex-299.md  codex-302.md  codex-356.md  codex-359.md  codex-362.md  codex-365.md  codex-368.md  codex-371.md  codex-377.md  codex-380.md  codex-387.md  (+23 more)
config/: coverage-baseline.json
docs/: AGENTS_POLICY.md  COMPATIBILITY.md  CONTRIBUTING.md  INTEGRATION_GUIDE.md  README.md  SOLUTION.md  STRUCTURE.md  TMP_TRANSITION_PLAN.md  USAGE.md  WORKFLOW_AUDIT_2025-12-25.md  WORKFLOW_GUIDE.md  agent-automation.md  autofix_type_hygiene.md  automation-system-implementation.md  bot-comment-handler.md  ci-failure-tracker.md  ci-workflow.md  ci_reuse.md  fast-validation-ecosystem.md  integration-test-failure-fix.md  integration-test-failure-fix.patch  llm-task-analysis.md
scripts/: aggregate_agent_metrics.py  analyze_codex_session.py  auto_type_hygiene.py  autofix_safe_sweep.py  build_autofix_pr_comment.py  check_branch.sh  check_remote_sync.sh  ci_cosmetic_repair.py  ci_coverage_delta.py  ci_failure_analyzer.py  ci_history.py  ci_metrics.py  classify_test_failures.py  coverage_history_append.py  dev_check.sh  fix_cosmetic_aggregate.py  fix_integration_tests_formatting.sh  fix_numpy_asserts.py  generate_residual_trend.py  keepalive-runner.js  keepalive_instruction_segment.js  keepalive_metrics_collector.py  keepalive_metrics_dashboard.py  ledger_migrate_base.py  ledger_validate.py  metrics_format_utils.py  mypy_autofix.py  mypy_return_autofix.py  pr_metrics_tracker.py  setup_env.sh  sync_action_versions.sh  sync_dev_dependencies.py  sync_status_file_ignores.py  sync_test_dependencies.py  sync_tool_versions.py  test_openai_provider.py  update-floating-tag.sh  update_autofix_expectations.py  update_residual_history.py  update_versions_from_pypi.py  (+4 more)
templates/: README.md  ci-basic.yml  ci-full.yml  ci-node-basic.yml  cosmetic-repair.yml  dependency-refresh.yml
templates/integration-repo/: .gitignore  README.md  pyproject.toml
templates/integration-repo/.github/workflows/: autofix-versions.env  ci.yml
templates/integration-repo/apps/service-a/: pyproject.toml
templates/integration-repo/apps/service-a/src/service_a/: __init__.py
templates/integration-repo/apps/service-a/tests/: test_service_a.py
templates/integration-repo/src/example/: __init__.py
templates/integration-repo/tests/: test_example.py
tests/: _autofix_diag.py  conftest.py  test_ci_failure_analyzer.py  test_coverage_guard.py  test_coverage_trend.py  test_enforce_gate_branch_protection.py  test_failure_signature.py  test_integration_repo_template.py  test_issues_registry.py  test_post_ci_summary.py  test_pr_metrics_tracker.py  test_resolve_mypy_pin.py  test_setup_checklist_ci_scripts.py  test_trend_analysis_helpers.py  test_workflow_health_check.py  test_workflow_validator.py
tools/: __init__.py  codex_jsonl_parser.py  codex_log_analyzer.py  codex_session_analyzer.py  coverage_guard.py  coverage_trend.py  disable_legacy_workflows.py  enforce_gate_branch_protection.py  integration_repo.py  llm_provider.py  post_ci_summary.py  requirements.txt  resolve_mypy_pin.py  test_failure_signature.py
(+274 files in other folders)
